--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTk1MDQ0Mjk3Nzk3ODE2MzMw.GSsHgy.a2LbGBRljIYJjD5DUMVsAl7VMHLedunbpg8Mi8"
+    "token": "OTk1MDQ0Mjk3Nzk3ODE2MzMw.GPCmzG.3T3W-eCu_p7d2ZRqAlfqBV696JJM2WVYatI1T8"
 
     
     
